_sass/_hero.scss
.hero {
  .btn-warning {
    font-weight: $font-weight-bold;
  }

  .btn-outline-light {
    &:hover {
      color: $brand-primary-dark;
    }
  }
}

.hero-container {
  max-width: 1140px;
  height: 169px;
  flex-direction: column;
  justify-content: center;
  display: flex;
}

.hero-heading {
  color: $white;
  font-weight: $headings-font-weight;
  line-height: $headings-line-height;
  margin-bottom: 0;

  @include media-breakpoint-up(sm) {
    font-size: $font-size-h2;
  }
}

.hero-content {
  color: $white;
  font-size: $font-size-large;
  line-height: 1.5;
  margin-bottom: 0;
  margin-top: 1.5rem;

  p {
    margin-bottom: 0;
  }
}

.hero-btn-group {
  background: $brand-primary;
  bottom: 0;
  box-shadow: 0 0 9px rgba(0, 0, 0, 0.5);
  display: flex;
  left: 0;
  padding: 16px;
  position: fixed;
  right: 0;
  text-align: center;
  z-index: 1;

  @include media-breakpoint-up(sm) {
    background: transparent;
    box-shadow: none;
    display: inline-block;
    padding: 0;
    position: relative;
    text-align: left;
  }

  .hero-btn-wrapper {
    flex: 0 0 50%;

    @include media-breakpoint-up(sm) {
      display: inline-block;
    }
  }

  .btn {
    font-size: 16px;
    margin-top: 0;
    width: 100%;

    @include media-breakpoint-up(sm) {
      font-size: 20px;
      padding: 0.75rem 1.5rem;
    }
  }
}

.hero-banner {
  background-position: top center;
  background-size: auto;

  .hero-container {
    max-width: 510px;
    -webkit-animation: herofadein 1s;
    animation: herofadein 1s;
  }

  .hero-heading {
    font-size: $font-size-xxx-large;

    &.text-ink {
      text-shadow: none;
    }
  }

  .hero-content {
    font-size: $font-size-medium;
    margin-top: 1rem;

    &.text-ink {
      text-shadow: none;
    }
  }
}

/* Standard syntax */
@keyframes herofadein {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

